# wjjjjw

./: CHANGELOG.md  GETTING_STARTED.md  LICENSE  PhIDO_Complete_Workflow_Details.md  Photonic_Devices_Summary.html  README.md  README.zh.md  export_diagram.py  generate_devices_summary_pdf.py  pyproject.toml  requirements-no-graphviz.txt  requirements.txt  workflow_diagram.html  workflow_to_image.py
.github/workflows/: pages.yml  release.yml  test_code.yml
GETTING_STARTED_EXAMPLE_OUTPUTS/Tidy3D/: Tidy3D_Prompts_CN.md
PhotonicsAI/: config.py  runtime_env.py
PhotonicsAI/KnowledgeBase/DesignLibrary/: _bend_s.py  _bezier_curve.py  _directional_coupler.py  _directional_coupler_adiabatic.py  _gc.py  _mmi1x2.py  _mmi2x2.py  _simulation_removed.py  add_drop_ring.py  athermal_dwdm_filter.py  auto_directional_coupler_2Dsemiconductorsasin_627.py  auto_directional_coupler_Alowlossandbroadband_193.py  auto_directional_coupler_Aluminumnitridewaveg_460.py  auto_directional_coupler_AsgardNOTTLbandnulli_584.py  auto_directional_coupler_AsgardNOTTLbandnulli_815.py  auto_directional_coupler_Asinglephonondirecti_459.py  auto_directional_coupler_BroadbandandUltraCom_837.py  auto_directional_coupler_Broadbandsiliconpola_706.py  auto_directional_coupler_Broadbandsiliconpola_877.py  auto_directional_coupler_CoherentTunnelingbyA_117.py  auto_directional_coupler_CoherentTunnelingbyA_161.py  auto_directional_coupler_ComparisonofLumerica_829.py  auto_directional_coupler_ComparisonofLumerica_841.py  auto_directional_coupler_Experimentalstudyofa_839.py  auto_directional_coupler_Freespaceopticsintwo_456.py  auto_directional_coupler_HighFidelityIntegrat_481.py  auto_directional_coupler_LaserStructuredOptic_593.py  auto_directional_coupler_LightProALinearPhoto_489.py  auto_directional_coupler_LightProALinearPhoto_682.py  auto_directional_coupler_LightProALinearPhoto_948.py  auto_directional_coupler_Lowdispersionlowfree_175.py  auto_directional_coupler_Lowlossmultilevelope_202.py  auto_directional_coupler_Multiportprogrammabl_546.py  auto_directional_coupler_OpticalFiberWaveguid_182.py  auto_directional_coupler_Polarizationbasedmod_116.py  auto_directional_coupler_ProgrammablePhotonic_662.py  auto_directional_coupler_RobustCharacterizati_357.py  auto_directional_coupler_Secondorderadddropfi_816.py  auto_directional_coupler_Siliconnitrideonchip_848.py  auto_directional_coupler_StripLoadedNanophoto_504.py  (+159 more)
PhotonicsAI/Photon/: DemoPDK.py  component_detector.py  llm_api.py  meep_runner.py  prompts.yaml  tidy3d_runner.py  utils.py  webapp.py
PhotonicsAI/Photon/drc/: drc.py
docs/: extraction_example_add_drop_ring.md  paper_extraction_template.md
meep_sim/: mmi_4x4.py
scripts/: auto_pdk_generator.py  deploy-meep-standalone.sh  tidy3d_env_check.py  tidy3d_env_fix.py
